[package]
name = "libload_reflective"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
libc = "0.2.161"

[dependencies.windows]
version = "0.58.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_SystemInformation"
]


